<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_cutout"
    tools:context=".Dashboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dshbrod"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/dshhead"
        android:layout_margin="15dp"
        android:textColor="@color/black"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dshhead"
        android:layout_margin="23dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:id="@+id/donate"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            app:cardCornerRadius="9dp"
            app:cardElevation="9dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:src="@drawable/donat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donate"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:id="@+id/receive"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            app:cardCornerRadius="9dp"
            app:cardElevation="9dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:src="@drawable/receive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Receive"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:id="@+id/foodmap"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            app:cardCornerRadius="9dp"
            app:cardElevation="9dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:src="@drawable/foodpoint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:id="@+id/mypins"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            app:cardCornerRadius="9dp"
            app:cardElevation="9dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pins"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pins"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="0"
            app:cardCornerRadius="9dp"
            app:cardElevation="9dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hist"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="1"
            app:cardCornerRadius="9dp"
            app:cardElevation="9dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logout"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </GridLayout>

</RelativeLayout>